--- a/portfolio/resume/templates/index.html
+++ b/portfolio/resume/templates/index.html
@@ -1028,20 +1028,16 @@
         </div>
 
         <div class="col-lg-8 mt-5 mt-lg-0">
-          <form
-            action="forms/contact.php"
-            method="post"
-            role="form"
-            class="php-email-form"
-          >
+          <form action="/" method="post" role="form" class="php-email-form">
+            {% csrf_token %}
             <div class="row">
               <div class="col-md-6 form-group">
                 <input
                   type="text"
-                  name="name"
+                  name="full_name"
                   class="form-control"
-                  id="name"
-                  placeholder="Your Name"
+                  id="full_name"
+                  placeholder="Full Name"
                   required
                 />
               </div>
